--- a/css/platform.css
+++ b/css/platform.css
@@ -331,6 +331,7 @@ background-image: none;
 }
 
 .btn-render{
+  outline:none;
   background: rgba(55, 196, 71, 0.7);
   color:#fff;
 position:relative;
@@ -340,8 +341,6 @@ position:relative;
   background: rgba(55, 196, 71, 0.9);
    color:#fefefe;
 }
-
-
 
 
 #car-wrapper{
@@ -724,6 +723,37 @@ border:none;
   text-indent: 5px;
 }
 
+
+.btn-customcolor {
+  margin-left: 5px;
+  background: #444;
+  color:#fff;
+  font-size: 13px;
+  outline:none;
+  border-radius: 2px;
+  width: 70px;
+  height:25px;
+  line-height: 20px;
+  padding:0;
+  text-align: center;
+
+}
+
+#color-inline2::-webkit-input-placeholder { color:#fff; }
+#color-inline2::-moz-placeholder { color:#fff; } /* firefox 19+ */
+#color-inline2::-ms-input-placeholder { color:#fff; } /* ie */
+
+
+.btn-customcolor:hover {
+  background: #333;
+  color:#fefefe;
+  outline:none;
+/*  padding:0;
+   padding-right:10px;*/
+  line-height: 20px;
+
+
+}
 .select-color {
   text-align: center;
 }
